--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
-  "botName": "Hinata Hyuga Bot",
+  "ownerNumber": ["6281234035779@s.whatsapp.net"],
+  "ownerName": ["Cioo-Md"],
+  "botName": "Cioo-Md",
   "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
-  "donasiGopay": "081575886399",
+  "donasipulsa": "081234035779",
+  "donasiDana": "081234035779",
   "sessionName": "session",
   "pathimg": "./media/hinata.jpg",
   "gamewaktu": 90,
