--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
   "donasipulsa": "081234035779",
   "donasiDana": "081234035779",
   "sessionName": "session",
-  "pathimg": "./media/hinata.jpg",
+  "pathimg": "./media/IMG_20220918_102224.jpg
+",
   "gamewaktu": 90,
   "limitCount": 25,
   "gcount": {
