--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "donasipulsa": "081234035779",
   "donasiDana": "081234035779",
   "sessionName": "session",
-  "pathimg": ".IMG_20220918_102224.jpg
+  "pathimg": "./media/IMG_20220918_102224.jpg
 
   "gamewaktu": 90,
   "limitCount": 25,
